<resources>
    <string name="app_name">intelliVert</string>
    <string name="intellivert">IntelliVert</string>
    <string name="resUnitToConvert">unitToConvert</string>
    <string name="unit_to_convert">Unit to Convert</string>
    <string name="input">Input a value to convert</string>
    <string name="convert">Convert</string>
    <string name="source_unit">Source Unit</string>
    <string name="target_unit">Target Unit</string>
</resources>