<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRootLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/idHeaderView"
            android:layout_width="415dp"
            android:layout_height="94dp"
            android:background="#455A64"
            app:layout_constraintBottom_toTopOf="@+id/idBodyLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/idHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intellivert"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/idHeaderView"
            app:layout_constraintEnd_toEndOf="@id/idHeaderView"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/idHeaderView"
            app:layout_constraintTop_toTopOf="@+id/idHeaderView"
            app:layout_constraintVertical_bias="0.819"
            tools:ignore="VisualLintBounds,VisualLintOverlap" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/idBodyLayout"
            android:layout_width="418dp"
            android:layout_height="772dp"
            android:background="#37474F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintBounds">

            <EditText
                android:id="@+id/idNumberSourceInput"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="213dp"
                android:layout_height="54dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="376dp"
                android:background="#455A64"
                android:backgroundTint="#455A64"
                android:ems="10"
                android:hapticFeedbackEnabled="true"
                android:hint="@string/input"
                android:importantForAutofill="no"
                android:inputType="numberSigned|text|textCapWords"
                android:shadowColor="#455A64"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/idConvertButton"
                android:layout_width="120dp"
                android:layout_height="49dp"
                android:layout_marginStart="148dp"
                android:layout_marginBottom="48dp"
                android:drawableTint="#8BC34A"
                android:foregroundTint="#8BC34A"
                android:hapticFeedbackEnabled="true"
                android:text="@string/convert"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/lime_green"
                app:iconTint="#8BC34A"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <Spinner
                android:id="@+id/idSourceUnitSpinner"
                android:layout_width="150dp"
                android:layout_height="62dp"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="196dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/source_unit"
                android:dropDownWidth="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/idTargetUnitSpinner"
                android:layout_width="150dp"
                android:layout_height="62dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="196dp"
                android:animationCache="false"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/target_unit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/idSwapUnitValues"
                android:layout_width="68dp"
                android:layout_height="47dp"
                android:layout_marginStart="172dp"
                android:layout_marginEnd="172dp"
                android:layout_marginBottom="32dp"
                android:background="#37474F"
                android:hapticFeedbackEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/idConvertButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/arrow_interchange_white_no_bg"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/idImageBodyPercolator"
                android:layout_width="211dp"
                android:layout_height="245dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="107dp"
                android:layout_marginBottom="72dp"
                android:background="#37474F"
                android:foregroundTintMode="src_over"
                app:layout_constraintBottom_toTopOf="@+id/idNumberSourceInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/returnmarcco_perc"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/idFooterBar"
                android:layout_width="418dp"
                android:layout_height="36dp"
                android:background="#455A64"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/idFooterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="148dp"
                android:layout_marginBottom="4dp"
                android:text="© github.com/returnMarcco"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/idFooterBar"
                app:layout_constraintEnd_toEndOf="@+id/idFooterBar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>